Fri Dec 13 14:59:29 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * NEWS:
        * docs/Options.html:
          Document new option. Also alphabetized the various factory options.

        * orbsvcs/tests/ImplRepo/oneway/defsync.conf:
        * tao/Client_Strategy_Factory.h:
        * tao/ORB_Core.cpp:
        * tao/Resource_Factory.h:
        * tao/default_client.h:
        * tao/default_client.cpp:
        * tao/default_resource.h:
        * tao/default_resource.cpp:
          Moved the new DefSyncScope option from the resource factory to the client
          strategy factory. It only affects client behavior so it makes more sense
          to be a client strategy option.

Fri Dec 13 00:24:50 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * bin/tao_other_tests.lst:
        * orbsvcs/ImplRepo_Service/Forwarder.cpp:
        * orbsvcs/tests/ImplRepo/oneway/defsync.conf:
          Fix for bug 4149 and update the test to reflect this status.

Thu Dec 12 20:38:46 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

       * orbsvcs/tests/ImplRepo/oneway/Test_i.cpp:
         fix for overaggressive file cleanup.

Thu Dec 12 15:32:01 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * bin/tao_other_tests.lst:
        * orbsvcs/tests/ImplRepo/oneway:
          Added new test.

        * tao/Messaging/Messaging_Policy_i.cpp:
          Get the new configurable default sync scope if no policy is
          defined.

        * tao/ORB_Core.h:
        * tao/ORB_Core.inl:
        * tao/ORB_Core.cpp:
        * tao/Resource_Factory.h:
        * tao/default_resource.h:
        * tao/default_resource.cpp:
          Allow a default sync scope to be set using -ORBDefaultSyncScope
          on the resource strategy factory. If unset, the default is
          SYNC_WITH_TRANSPORT. This feature allows for global sync scope
          configuration without adding a dependency on the Messaging
          library and adding a block of code to set scope via a policy.