@@ -30,16 +30,8 @@
 
 #if (TAO_HAS_INTERCEPTORS == 1)
 # define TAO_INTERCEPTOR(X) X
-# define TAO_INTERCEPTOR_CHECK ACE_TRY_CHECK
-# define TAO_INTERCEPTOR_CHECK_RETURN(X) ACE_TRY_CHECK
-# define TAO_INTERCEPTOR_THROW(X) ACE_TRY_THROW(X)
-# define TAO_INTERCEPTOR_THROW_RETURN(X,Y) ACE_TRY_THROW(X)
 #else
 # define TAO_INTERCEPTOR(X)
-# define TAO_INTERCEPTOR_CHECK ACE_CHECK
-# define TAO_INTERCEPTOR_CHECK_RETURN(X) ACE_CHECK_RETURN (X)
-# define TAO_INTERCEPTOR_THROW(X) ACE_THROW(X)
-# define TAO_INTERCEPTOR_THROW_RETURN(X,Y) ACE_THROW_RETURN(X,Y)
 #endif /* TAO_HAS_INTERCEPTORS */
 
 #include /**/ "ace/post.h"
